UTC based date + try/catch + Updated README